Adds GITHUB_TOKEN to Tauri build action
Ensures the build step can authenticate with GitHub when attaching artifacts to the prepared release.

Prevents release failures caused by missing token in the workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,5 +60,7 @@ jobs:
 
       - name: Build application with Tauri
         uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           releaseId: ${{ needs.prepare-release.outputs.release_id }}
