Normalize macro scroll deltas and persist mode
Adds scroll normalization so captured scroll events replay consistently across platforms. Migrates existing macros on load and records a mode flag to avoid re-normalizing, improving reliability for legacy captures.

Enables macOS private API feature for native builds to support improved event handling.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,3 +35,6 @@ schemars = { path = "../vendor/schemars-0.8.22" }
 [target.'cfg(windows)'.dependencies]
 device_query = "1.1"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+tauri = { version = "2", features = ["macos-private-api"] }
+
